--- a/style2.css
+++ b/style2.css
@@ -163,7 +163,201 @@ html,body{
     font-size: 4vw;
 }
 .content3:hover{
+    back*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html,body{
+    width:100%;
+    height: 100%;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+.main{
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+.nav{
+    display: flex; 
+    align-items: center; 
+    justify-content:space-between;
+    padding: 20px;
+    border-bottom: 3px solid #dadada;
+    position:-sticky;
+}
+.navoption{
+    display: flex;
+    gap:30px;
+
+}
+
+.navoption h4:hover{
+    color: white;
     background-color: black;
+    padding: 0.4vw;
+    border: 1px solid black;
+    border-radius: 2vw;
+
+}
+.nav h2{
+    font-size:2.5vw;
+}
+.signin{
+    font-size: 15px;
+    border-radius: 1.5vw;
+    padding:0.1vw;
+    margin: 2px;
+    background-color:black;
+    color: white;
+}
+.signin:hover{
+    color: black;
+    background-color:limegreen;
+    padding: 0.7vw;
+}
+.content{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.left{
+    height:100% ;
+    width: 50%;
+    background-color:black;
+    position: relative;
+    flex: 50%;
+}
+.left h1{
+    font-size: 4vw;
+    color: white;
+    padding-top: 7vw;
+    padding-left: 5vw;
+}
+.left h1:hover{
+    color: red;
+}
+.left h1::selection{
+    color: limegreen;
+}
+.left p{
+    color: #dadada;
+    padding: 6vw 5vw;
+}
+.left p:hover{
+    color:limegreen;
+}
+.left p::selection{
+    color: red;
+}
+.left img{
+    width: 100%;
+    padding: 0vw 5vw;
+
+}
+
+.right{
+    width: 50%;
+    height: 100%;
+    background-color:black;
+    position: relative;
+    flex: 50%;
+}
+.right img{
+    width: 100%;
+    padding:6vw 4vw;    
+}
+.right h1{
+    font-size: 4vw;
+    color: white;
+    padding-left: 30vw;
+    padding-right: 5;
+
+}
+.right h1:hover{
+    color: red;
+}
+.right h1::selection{
+    color:limegreen;
+}
+.right p{
+    color: white;
+    padding:6vw 4vw;  
+    
+}
+.right p:hover{
+    color: limegreen;
+}
+.right p::selection{
+    color: red;
+}
+.content2{
+    height: 20%;
+    width: 100%;
+    display: flex;
+    padding-left: 25vw;
+    padding-top: 5vw;
+}
+.content2:hover{
+    background-color:black;
+    color:red;
+}
+
+
+.content2 h1{
+    font-size: 4vw;
+    padding: 6px;
+
+
+}
+.content2 h1::selection{
+    color: white;
+
+}
+
+.content3{
+    width: 100%;
+    height:80%;
+    padding-right: 2vw;
+    padding-left: 2vw;
+    padding-top: 3vw;
+}
+.content3 p{
+    font-size: 4vw;
+}
+.content3:hover{
+    background-color: black;
+    color: white;
+}
+.content3 p::selection{
+    color: limegreen;
+}
+@media (max-width:600px) {
+    .navoption h4{
+        display: none;
+    }
+    .nav h2{
+        font-size: 8vw;
+        padding-left: 7vw;
+    }
+    .content2{
+        height: 10%;
+    }
+    .signin{
+        font-size: 5vw;
+        border-radius: 5vw;
+    }
+
+}
+@media (min-width:320){
+    .left{
+        flex: 100%;
+
+
+    }
+}ground-color: black;
     color: white;
 }
 .content3 p::selection{
